# YanBot-OpenMariya_Edition

./: README.md  botmanager.py  cloud.json  langmanager.py  main.py  pyproject.toml
jsons/en-us/: rand_sents_en.json
jsons/es-es/: rand_sents_es.json
jsons/fr-fr/: rand_sents_fr.json
jsons/ja-jp/: rand_sents_jp.json
jsons/ko-kr/: rand_sents_kr.json
jsons/ru-ru/: rand_sents_ru.json
jsons/zh-cn/: rand_sents.json
jsons/zh-hk/: rand_sents_hk.json
modules/: Recovery.py
modules/en-us/: rand_photo(en_us).py  version(en_us).py
modules/es-es/: version(es_es).py
modules/fr_fr/: rand_photo(fr_fr).py  version(fr_fr).py
modules/ja-jp/: rand_photo(ja_jp).py  students_voices.py  version(ja_jp).py
modules/ko-kr/: rand_photo(ko_kr).py  students_voices.py  version(ko_kr).py
modules/ru-ru/: version(ru_ru).py
modules/zh-cn/: menu.py  rand_photo.py  students_voices.py  version.py
modules/zh-hk/: version(zh_hk).py
yamls/: General.yaml  Voices.yaml
