[tool.poetry]
name = "openmariya"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
graia-ariadne = {extras = ["standard"], version = "^0.10.3"}
loguru = "^0.6.0"
pyyaml = "^6.0"
graiax-silkcoder = {extras = ["ffmpeg"], version = "^0.3.5"}



[tool.pdm]
[tool.pdm.build]
includes = []

[[tool.pdm.source]]
name = "tuna-tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
verify_ssl = true
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[[tool.poetry.source]]
name = "tuna-tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[project]
name = "openmariya"
version = "0.1.0"
description = ""
authors = [
    {name = "ltzXiaoYanMo", email = "2315039216@qq.com"},
    {name = "None"},
]
dependencies = ["graia-ariadne[standard]<1.0.0,>=0.10.3", "loguru<1.0.0,>=0.6.0", "pyyaml<7.0,>=6.0", "graiax-silkcoder[ffmpeg]<1.0.0,>=0.3.5"]
requires-python = ">=3.10,<4.0"
license = {text = "AGPL v3.0"}
readme = "README.md"

[project.urls]
